# BettingPrediction

./: .env.example  .gitignore  DEPLOY.md  PRODUCT.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  techstack.md
backend/data/: live_fixture_map.example.json
backend/scripts/: scrape_worldcup.py
backend/src/app/: __init__.py  dependencies.py  main.py  server.py
backend/src/app/agents/: __init__.py  base.py  debug_print.py  market_prediction.py  match_insight.py  mcp_client.py  prediction_chat.py  search_tools.py
backend/src/app/agents/model_adapters/: __init__.py  deepseek.py  qwen.py
backend/src/app/agents/observability/: __init__.py  langfuse.py
backend/src/app/agents/prompts/: __init__.py  futbolia_market_prediction.prompty  futbolia_match_insight.prompty  futbolia_prediction_chat.prompty  futbolia_prediction_chat_en.prompty  futbolia_prediction_chat_vi.prompty
backend/src/app/api/: router.py
backend/src/app/connectors/: __init__.py
backend/src/app/core/: app_config.py
backend/src/app/models/: auth.py  chat.py  live_events.py  market_prediction.py  news.py  odds.py  worldcup.py
backend/src/app/services/: auth_tokens.py  live_event_service.py  market_prediction_service.py  match_context_service.py  news_search_service.py  odds_service.py  prediction_cache.py  worldcup_service.py
backend/tests/: test_agents.py  test_auth.py  test_live_events.py  test_market_prediction_service.py  test_news_search_service.py  test_odds_service.py  test_worldcup_service.py
frontend/: .dockerignore  (+9 more)
(+108 files in other folders)
